# OpenOasis

./: .clang-format  .codecov.yml  .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  index.html  launcher.cpp  mkdocs.yml  objects.inv  search.html
.github/workflows/: codecov.yml  linux.yml  macos.yml  py.yml  sp.yml  windows.yml
Agents/: README.md
Agents/Hippo/: README.md  model.py
Agents/tests/: test_hippo.py  test_spark.py
Asst/: README.md
Cores/: Launcher.cpp  README.md
Cores/CommImpl/: AbstractAdaptedOutput.cpp  AbstractAdaptedOutput.h  Arguments.h  Describer.h  Dimension.cpp  Dimension.h  ElementSet.cpp  ElementSet.h  ExchangeItemEventArgs.cpp  ExchangeItemEventArgs.h  Identifier.cpp  Identifier.h  Input.cpp  Input.h  LinkableComponent.cpp  LinkableComponent.h  LinkableComponentEventArgs.cpp  LinkableComponentEventArgs.h  Output.cpp  Output.h  Quantity.cpp  Quantity.h  SpaceAdaptedOutputFactory.cpp  SpaceAdaptedOutputFactory.h  Time.cpp  Time.h  TimeAdaptedOutputFactory.cpp  TimeAdaptedOutputFactory.h  TimeSet.cpp  TimeSet.h  Unit.cpp  Unit.h  ValueSet2D.cpp  ValueSet2D.h
Cores/Inc/: IElementSet.h
Cores/SystFluids/: CMakeLists.txt
Cores/SystFluids/HydrologicComps/: RainfallModule.cpp  RainfallModule.h  RiverModule.cpp  RiverModule.h  RunoffModule.cpp  RunoffModule.h
Cores/SystFluids/Hydrologics/: RainfallModule.cpp  RainfallModule.h  RiverModule.cpp  RiverModule.h  RunoffModule.cpp  RunoffModule.h
Cores/SystFluids/export/: OasisFluidsModule.cpp  OasisFluidsModule.h  VersionInfo.rc.in
Cores/SystFluids/property/: VersionConfig.h.in
Cores/SystHeats/: CMakeLists.txt
Cores/SystHeats/HeatConductionModel/: HeatConductionModel.cpp  HeatConductionModel.h
Cores/SystHeats/demo/: heats.cpp  heats.h
Cores/SystHeats/export/: OasisHeatsModule.cpp  OasisHeatsModule.h
Cores/SystHeats/property/: VersionConfig.h.in  VersionInfo.rc.in
Cores/Utils/: CommConstants.h  CommMacros.h  CsvHandler.cpp  CsvHandler.h  DateTime.cpp  DateTime.h  JsonHandler.cpp  JsonHandler.h  LibraryLoader.h  MultiIndexMapper.h  StreamReader.cpp  StringHelper.h  VectorHelper.h  YamlHandler.cpp  YamlHandler.h
Cores/tests/: FolderConfig.h.in  testCsvHandler.cpp  testDatetime.cpp  testFilePathHelper.cpp  testFluids.cpp  testFramework.cpp  testGrid.cpp  testHeats.cpp  testJsonHandler.cpp  testMatrix.cpp  testStringHelper.cpp  testVectorField.cpp  testVectorMapHelper.cpp  testYamlHandler.cpp
Cores/wrappers/: OasisFlows.cpp  PyOasisFluidsModule.cpp  PyOasisFows.cpp  PyOasisHeatsModule.cpp
DataAnalysis/: README.md
DataAsst/MeshConverters/: GmshMesh.py
DataAssts/: index.html
Dists/: README.md
Dists/exports/: OasisFluidsModule.h  OasisHeatsModule.h
Dists/inc/: IAdaptedOutputFactory.h  IByteStateConverter.h  IElementSet.h  IUnit.h  IValueSet.h
Doc/: OpenOasisDevTips.md  OpenOasisTutorial.md  README.md
Doc/Models/: README.md
Doc/iAgents/: README.md
Docs/: OpenOasisDevTips.md  OpenOasisTutorial.md
Model/: Launcher.cpp  README.md
Model/CommImp/: AbstractAdaptedOutput.cpp  AbstractAdaptedOutput.h  Arguments.h  Describer.h  Dimension.h  ElementSet.cpp  ElementSet.h  ExchangeItemEventArgs.h  Identifier.h  Input.cpp  Input.h  LinkableComponent.cpp  LinkableComponent.h  LinkableComponentEventArgs.h  Output.cpp  Output.h  Quantity.h  SpaceAdaptedOutputFactory.cpp  SpaceAdaptedOutputFactory.h  Time.cpp  Time.h  TimeAdaptedOutputFactory.cpp  TimeAdaptedOutputFactory.h  TimeSet.cpp  TimeSet.h  Unit.h  ValueSet2D.cpp  ValueSet2D.h
Model/CommImpl/: AbstractAdaptedOutput.cpp  AbstractAdaptedOutput.h  Arguments.cpp  Arguments.h  Describer.cpp  Describer.h  Dimension.cpp  Dimension.h  ElementSet.cpp  ElementSet.h  ExchangeItemEventArgs.h  Identifier.h  Input.cpp  Input.h  LinkableComponent.cpp  LinkableComponent.h  LinkableComponentEventArgs.cpp  LinkableComponentEventArgs.h  Output.cpp  Output.h  Quantity.cpp  Quantity.h  SpaceAdaptedOutputFactory.cpp  SpaceAdaptedOutputFactory.h  Time.cpp  Time.h  TimeAdaptedOutputFactory.cpp  TimeAdaptedOutputFactory.h  TimeSet.cpp  TimeSet.h  Unit.cpp  Unit.h  ValueSet2D.cpp  ValueSet2D.h
Model/Inc/: IBaseExchangeItem.h  ILinkableComponent.h
Model/ThirdPart/: README.md
Model/Utils/: CommConstants.h  DateTime.cpp  JsonHandler.cpp  JsonHandler.h  LibraryLoader.h  MultiIndexMapper.h  VectorHelper.h  YamlHandler.h
Model/tests/: testCsvHandler.cpp  testDatetime.cpp  testFilePathHelper.cpp  testFluids.cpp  testFramework.cpp  testHeats.cpp  testJsonHandler.cpp  testMatrix.cpp  testStringHelper.cpp  testVectorField.cpp  testVectorMapHelper.cpp  testYamlHandler.cpp
Model/wrappers/: OasisFlows.cpp  OasisFlows.h
Models/: Launcher.cpp  README.md
Models/CommImp/: LinkableComponent.h  TimeAdaptedOutputFactory.cpp
Models/Utils/: Logger.cpp  Logger.h  MultiIndexMapper.h  RegisterFactory.h  StreamReader.h
Models/tests/: testHeats.cpp  testVectorField.cpp
Models/wrappers/: OasisFlows.cpp  OasisFlows.h
OasisAgents/: README.md
OasisAgents/Hippo/: README.md  __init__.py  model.py  net.py  task.py
OasisAgents/tests/: test_hippo.py
OpenOasisDevTips/: index.html
OpenOasisTutorial/: index.html
Rsrc/Benchmarks/: README.md
Rsrc/TheoryBriefs/: FluidFlowEquationClusters.md  JourneyToAI.ipynb  NavierStokesModel-more.md  NavierStokesModel.md  README.md  SaintVenantModel-more.md
Rsrcs/: README.md
Rsrcs/Benchmarks/: .gitkeep  README.md
Rsrcs/TheoryBriefs/: BoltzmannModel.md  PipeNetworkModel.md  README.md  SaintVenantModel.md
Tools/: README.md
Uaides/: README.md
Uengrs/: README.md
VizNex/: README.md
assets/Logo/: logo.txt
iAgents/: README.md  __init__.py  index.html
iAgents/Spark/: README.md  model.py  net.py
iAgents/tests/: test_spark.py
models/_boundary_8h/: index.html
models/_boundary_8h_source/: index.html
models/_coordinate_8cpp/: index.html
models/_coordinate_8cpp_source/: index.html
models/_coordinate_8h/: index.html
models/_coordinate_8h_source/: index.html
models/_curl_operator_8h/: index.html
models/_curl_operator_8h_source/: index.html
search/: search_index.json
(+1128 files in other folders)
